Fix responsiveness on mobile

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -512,9 +512,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 1rem;
   margin-right: 1rem;
 }
-.mt-10 {
-  margin-top: 2.5rem;
-}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -578,14 +575,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
-.h-screen {
-  height: 100vh;
+.h-auto {
+  height: auto;
 }
 .h-10 {
   height: 2.5rem;
 }
 .h-12 {
   height: 3rem;
+}
+.h-screen {
+  height: 100vh;
 }
 .h-3\/4 {
   height: 75%;
@@ -632,8 +632,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-items-center {
   justify-items: center;
 }
-.gap-4 {
-  gap: 1rem;
+.overflow-auto {
+  overflow: auto;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -645,9 +645,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-2 {
   border-width: 2px;
 }
-.bg-lightblack {
+.bg-stone-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 45 64 / var(--tw-bg-opacity));
+  background-color: rgb(41 37 36 / var(--tw-bg-opacity));
 }
 .bg-gray-200 {
   --tw-bg-opacity: 1;
@@ -661,16 +661,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
-.bg-stone-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(41 37 36 / var(--tw-bg-opacity));
-}
 .bg-transparent {
   background-color: transparent;
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-gray-500 {
   --tw-bg-opacity: 1;
@@ -726,11 +718,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-10 {
+  padding-top: 2.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
 }
 .pl-4 {
   padding-left: 1rem;
@@ -752,14 +750,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -767,6 +757,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -781,17 +775,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .capitalize {
   text-transform: capitalize;
 }
-.text-yellowsun {
-  --tw-text-opacity: 1;
-  color: rgb(249 184 63 / var(--tw-text-opacity));
-}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+.opacity-90 {
+  opacity: 0.9;
 }
 .opacity-80 {
   opacity: 0.8;
@@ -809,9 +798,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.hover\:bg-amber-200:hover {
+.hover\:bg-stone-600:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(253 230 138 / var(--tw-bg-opacity));
+  background-color: rgb(87 83 78 / var(--tw-bg-opacity));
 }
 .hover\:text-yellowsun:hover {
   --tw-text-opacity: 1;
@@ -825,10 +814,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:static {
     position: static;
-  }
-
-  .md\:mt-36 {
-    margin-top: 9rem;
   }
 
   .md\:mt-8 {
@@ -867,13 +852,22 @@ Ensure the default browser behavior of the `hidden` attribute.
     background-color: transparent;
   }
 
-  .md\:p-6 {
-    padding: 1.5rem;
+  .md\:pt-36 {
+    padding-top: 9rem;
+  }
+
+  .md\:pb-4 {
+    padding-bottom: 1rem;
   }
 
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-6xl {
@@ -892,7 +886,19 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-bottom: 2rem;
   }
 
+  .lg\:h-10 {
+    height: 2.5rem;
+  }
+
+  .lg\:w-10 {
+    width: 2.5rem;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:gap-16 {
+    gap: 4rem;
   }
 };
